--- a/Galactick.uproject
+++ b/Galactick.uproject
@@ -7,12 +7,8 @@
 	"Plugins": [
 		{
 			"Name": "SaveExtension",
-			"Enabled": true,
+			"Enabled": false,
 			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/91084f43b68047ac8da6fc88a7467936"
 		}
-	],
-	"TargetPlatforms": [
-		"AllDesktop",
-		"WindowsNoEditor"
 	]
 }
