--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -87,6 +87,10 @@ ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/Blueprint/BP_GameMode.BP_GameMode_C
 GlobalDefaultServerGameMode=None
 
+[/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
+bEnableGradle=False
+bFullScreen=True
+
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
 DefaultTerminalVelocity=4000.000000
@@ -131,3 +135,7 @@ AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
+
+[/Script/Engine.Engine]
+bUseFixedFrameRate=True
+
