--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -7,6 +7,8 @@ IncludeCrashReporter=True
 bShareMaterialShaderCode=True
 bSharedMaterialNativeLibraries=True
 BuildConfiguration=PPBC_Shipping
+FullRebuild=False
+ForDistribution=False
 
 [/Script/MoviePlayer.MoviePlayerSettings]
 bWaitForMoviesToComplete=True
