--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -88,7 +88,7 @@ GlobalDefaultGameMode=/Game/Blueprint/BP_GameMode.BP_GameMode_C
 GlobalDefaultServerGameMode=None
 
 [/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
-bEnableGradle=False
+bEnableGradle=True
 bFullScreen=True
 
 [/Script/Engine.Engine]
@@ -138,5 +138,4 @@ SyncSceneSmoothingFactor=0.000000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
-
 
