--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -90,6 +90,7 @@ GlobalDefaultServerGameMode=None
 [/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
 bEnableGradle=True
 bFullScreen=True
+bPackageDataInsideApk=True
 
 [/Script/Engine.Engine]
 bUseFixedFrameRate=False
@@ -138,5 +139,4 @@ SyncSceneSmoothingFactor=0.000000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
-
 
