--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -11,9 +11,11 @@ bSupportsPortraitOrientation=False
 bSupportsUpsideDownOrientation=False
 bSupportsLandscapeLeftOrientation=True
 PreferredLandscapeOrientation=LandscapeLeft
+CompressionOverrides=(bOverrideCompressionTimes=False,DurationThreshold=5.000000,MaxNumRandomBranches=50,SoundCueQualityIndex=25)
 
 [/Script/Engine.RendererSettings]
 r.DefaultFeature.AutoExposure=False
+r.Shadow.CSM.MaxMobileCascades=2
 
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
@@ -91,6 +93,7 @@ GlobalDefaultServerGameMode=None
 bEnableGradle=True
 bFullScreen=True
 bPackageDataInsideApk=True
+CompressionOverrides=(bOverrideCompressionTimes=False,DurationThreshold=5.000000,MaxNumRandomBranches=50,SoundCueQualityIndex=25)
 
 [/Script/Engine.Engine]
 bUseFixedFrameRate=False
