hud control and other

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -83,7 +83,7 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
-GameInstanceClass=/Script/Engine.GameInstance
+GameInstanceClass=/Game/Blueprint/Bp_GameInstance.Bp_GameInstance_C
 GameDefaultMap=/Game/Maps/Angar.Angar
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/Blueprint/BP_GameMode.BP_GameMode_C
@@ -145,4 +145,3 @@ DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds
 
 [/Script/Engine.AudioSettings]
 DefaultBaseSoundMix=/Engine/EngineSounds/Duck_Normal_Attack_MixMod.Duck_Normal_Attack_MixMod
-
