--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -94,11 +94,15 @@ bEnableGradle=True
 bFullScreen=True
 bPackageDataInsideApk=True
 CompressionOverrides=(bOverrideCompressionTimes=False,DurationThreshold=5.000000,MaxNumRandomBranches=50,SoundCueQualityIndex=25)
+Orientation=FullSensor
 
 [/Script/Engine.Engine]
 bUseFixedFrameRate=False
 FixedFrameRate=200.000000
 SmoothedFrameRateRange=(LowerBound=(Type=Inclusive,Value=22.000000),UpperBound=(Type=Exclusive,Value=60.000000))
+
+[/Script/Engine.AudioSettings]
+DefaultBaseSoundMix=/Engine/EngineSounds/Duck_Normal_Attack_MixMod.Duck_Normal_Attack_MixMod
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
@@ -143,5 +147,4 @@ InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
 
-[/Script/Engine.AudioSettings]
-DefaultBaseSoundMix=/Engine/EngineSounds/Duck_Normal_Attack_MixMod.Duck_Normal_Attack_MixMod
+
